  so it's no longer needed to install the DirectX runtime
+ MpegSplitter: support for DVD-Audio LPCM and MLP in .aob files
+ Use FFmpeg for AC3 decoding
* Replaced all custom and thirdparty image loading code in favor of Windows's CImage.
  This gives us support for other formats and we get rid of a couple of 3rd party libraries.
* Unrar is statically linked and so MPC-HC and VSFilter no longer need the unrar dll.
* Updated Unrar to v4.20
* Updated MediaInfoLib to v0.7.58
* Updated ZenLib to v0.4.27
* Updated FFmpeg (git 3b0ad04)
* Updated Czech, Russian, Ukrainian, Basque, Polish and Catalan translations
* Ticket #2227, Hide the seek bar in capture mode
* Ticket #2342, MPC-HC will now use the Windows theme font for the Statusbar, OSD messages
  and a few other places on Windows Vista and newer
! The hand cursor wasn't shown in the web links in Keys and WebServer options page
! Toolbar code cleanup and background fix for Windows XP
! The last textbox used in the Goto dialog was not remembered since r3964 and r3965
! Always show an error message instead of crashing when the argument of a command line
  switch is missing
! Ticket #504, Fixed rounding errors that prevented a properly centered image
  and caused unneeded resizing because the video size was off by one
! Ticket #2330, Fix the radio buttons in the Logo options page
! Ticket #2349, Recent Files: "Clear List" did not remove all files from the list
! Ticket #2356, The "With icons" and "File(s)" options in the Formats options page
  were not applied if no association was previously modified
! Ticket #2362, [DVB] Fix the Electronic Program Guide (EPG):
    - Fix the parsing of the event's information
    - Fix the parsing of the characters' encoding
    - Fix the display of the start and end time when DST is observed
! Ticket #2365, The volume slider wasn't properly redrawn in some cases
! Ticket #2427, The command line was not parsed when using slave mode